<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linear_item_user"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_item_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAllCaps="false"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAllCaps="false"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_telp"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/txt_notelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAllCaps="false"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/alamat"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/txt_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAllCaps="false"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
