<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.tambah.TambahUserActivitiy">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:title="Tambah User"
                    app:titleTextColor="@android:color/white"/>

            <ImageView
                    android:id="@+id/img_simpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_check_white"
                    android:contentDescription="@string/minus"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        style="@style/TextInputLayoutOutlineBoxDense">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/username"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        style="@style/TextInputLayoutOutlineBoxDense">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:passwordToggleEnabled="true"
                        style="@style/TextInputLayoutOutlineBoxDense">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        style="@style/TextInputLayoutOutlineBoxDense">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_notelp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:hint="@string/no_telpon"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        style="@style/TextInputLayoutOutlineBoxDense">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_alamat"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:inputType="textMultiLine"
                            android:hint="@string/alamat"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>